--- a/app-instructions.html
+++ b/app-instructions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Instructions for using Itoshiro Zuna's fractal apps: Fractal AI Research, Fractal Meditation, Virtual Fractal Sanctuary, and PlasmaMind: Journey Through Consciousness.">
+    <meta name="description" content="Instructions for using Itoshiro Zuna's apps: Fractal AI Research, Fractal Meditation, Virtual Fractal Sanctuary, PlasmaMind: Journey Through Consciousness, Fractal Racers: Tron Edition, Kai Wisdom Fighters, and Kid's Zone apps including Kai Wisdom Fighters and Certificate.">
     <title>Itoshiro Zuna | App Instructions</title>
     <style>
         body {
@@ -100,6 +100,18 @@
             color: #FFD700;
             margin: 10px auto;
         }
+        footer {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+        footer p {
+            margin: 5px 0;
+            color: #C0C0C0;
+            text-shadow: 0 0 5px #000;
+        }
         @media (max-width: 768px) {
             nav a { margin: 0 10px; font-size: 1rem; }
             section { padding: 60px 20px 20px 20px; }
@@ -119,8 +131,16 @@
                 <a href="fractal-ai-research.html">Fractal AI Research</a>
                 <a href="fractal-meditation.html">Fractal Meditation</a>
                 <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
-                <a href="plasma-mind.html">PlasmaMind: Journey Through Consciousness</a>
+                <a href="plasmamind-journey.html">PlasmaMind: Journey Through Consciousness</a>
+                <a href="fractal-racers.html">Fractal Racers: Tron Edition</a>
                 <a href="app-instructions.html">Instructions</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <a href="#">Kid's Zone</a>
+            <div class="dropdown-content">
+                <a href="kai-wisdom-fighters.html">Kai Wisdom Fighters</a>
+                <a href="certificate.html">Certificate</a>
             </div>
         </div>
     </nav>
@@ -149,9 +169,33 @@
                 <p><strong>How It Works:</strong> Open the app in your browser, use the UI buttons ("Start Meditation," "Toggle Guide," "VR Mode") to interact with the fractal visualization, and follow the guided meditation prompts displayed at the bottom of the screen. Optionally, enter VR mode for a more immersive experience.</p>
                 <p><strong>What It Does:</strong> Provides an immersive 3D fractal environment with a pulsating central sphere, accompanied by guided meditation prompts and calming audio to facilitate consciousness expansion.</p>
                 <p><strong>What It Can Be Used For:</strong> Ideal for meditation, exploring altered states of consciousness, or enhancing spiritual practices. Use it to deepen your mindfulness routine, engage in self-reflection, or as a tool for metaphysical exploration.</p>
+
+                <h3>Fractal Racers: Tron Edition</h3>
+                <p><strong>How It Works:</strong> Launch the app in your browser, select a racer and track, and use keyboard controls (arrow keys or WASD) to navigate the neon-lit fractal tracks. Avoid obstacles and collect power-ups to gain speed boosts.</p>
+                <p><strong>What It Does:</strong> Offers a high-speed racing game set in a 3D fractal environment inspired by Tron, with dynamic tracks, customizable racers, and competitive gameplay.</p>
+                <p><strong>What It Can Be Used For:</strong> Perfect for gaming enthusiasts, casual players, or those interested in fractal-based visuals. Use it for entertainment, to test reflexes, or as a fun way to explore fractal geometry in a gaming context.</p>
+
+                <h3>Kai Wisdom Fighters</h3>
+                <p><strong>How It Works:</strong> Open the app in your browser, follow the tutorial to select a monster, and solve math problems to attack enemies. Use the UI to customize monsters, adjust grade levels (1st to 6th), and toggle music or full-screen mode.</p>
+                <p><strong>What It Does:</strong> Combines math-based gameplay with a monster battling system, featuring 3D visuals, elemental effects, and progressive levels to defeat bosses.</p>
+                <p><strong>What It Can Be Used For:</strong> Ideal for children learning math, educators, or parents seeking engaging educational tools. Use it to practice arithmetic, improve problem-solving skills, or as a fun classroom activity.</p>
+
+                <h3>Kid's Zone</h3>
+                <p><strong>Kai Wisdom Fighters</strong></p>
+                <p><strong>How It Works:</strong> Access the Kid's Zone via the navigation menu, select Kai Wisdom Fighters, and engage in math-based battles. Choose a monster, solve math problems to attack, and progress through levels to defeat bosses. Customize your monster's appearance and select appropriate grade levels.</p>
+                <p><strong>What It Does:</strong> Provides an educational game where kids solve math problems to power their monster's attacks in a vibrant 3D world, encouraging learning through play.</p>
+                <p><strong>What It Can Be Used For:</strong> Designed for young learners to practice math in an engaging, game-based format. Use it at home or in school to make learning fun and interactive.</p>
+
+                <p><strong>Certificate</strong></p>
+                <p><strong>How It Works:</strong> Access the Certificate page via the Kid's Zone menu, enter the child's name and achievement details, and generate a printable certificate. Follow prompts to customize and download the certificate.</p>
+                <p><strong>What It Does:</strong> Creates personalized certificates to reward children for achievements, such as completing levels in Kai Wisdom Fighters or other milestones.</p>
+                <p><strong>What It Can Be Used For:</strong> Perfect for parents, teachers, or educators to motivate and recognize children's accomplishments. Use it to celebrate progress in learning or gaming challenges.</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>© 2025 Itoshiro Zuna. All rights reserved.</p>
+    </footer>
     <script>
         const canvas = document.getElementById('fractalCanvas');
         const ctx = canvas.getContext('2d');
