--- a/app-instructions.html
+++ b/app-instructions.html
@@ -181,12 +181,12 @@
                 <p><strong>What It Can Be Used For:</strong> Ideal for children learning math, educators, or parents seeking engaging educational tools. Use it to practice arithmetic, improve problem-solving skills, or as a fun classroom activity.</p>
 
                 <h3>Kid's Zone</h3>
-                <p><strong>Kai Wisdom Fighters</strong></p>
+                <h3>Kai Wisdom Fighters</h3>
                 <p><strong>How It Works:</strong> Access the Kid's Zone via the navigation menu, select Kai Wisdom Fighters, and engage in math-based battles. Choose a monster, solve math problems to attack, and progress through levels to defeat bosses. Customize your monster's appearance and select appropriate grade levels.</p>
                 <p><strong>What It Does:</strong> Provides an educational game where kids solve math problems to power their monster's attacks in a vibrant 3D world, encouraging learning through play.</p>
                 <p><strong>What It Can Be Used For:</strong> Designed for young learners to practice math in an engaging, game-based format. Use it at home or in school to make learning fun and interactive.</p>
 
-                <p><strong>Certificate</strong></p>
+                <h3>Certificate</h3>
                 <p><strong>How It Works:</strong> Access the Certificate page via the Kid's Zone menu, enter the child's name and achievement details, and generate a printable certificate. Follow prompts to customize and download the certificate.</p>
                 <p><strong>What It Does:</strong> Creates personalized certificates to reward children for achievements, such as completing levels in Kai Wisdom Fighters or other milestones.</p>
                 <p><strong>What It Can Be Used For:</strong> Perfect for parents, teachers, or educators to motivate and recognize children's accomplishments. Use it to celebrate progress in learning or gaming challenges.</p>
