--- a/app-instructions.html
+++ b/app-instructions.html
@@ -131,7 +131,7 @@
                 <a href="fractal-ai-research.html">Fractal AI Research</a>
                 <a href="fractal-meditation.html">Fractal Meditation</a>
                 <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
-                <a href="plasmamind-journey.html">PlasmaMind: Journey Through Consciousness</a>
+                <a href="plasma-mind.html">PlasmaMind: Journey Through Consciousness</a>
                 <a href="fractal-racers.html">Fractal Racers: Tron Edition</a>
                 <a href="app-instructions.html">Instructions</a>
             </div>
