--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         // For production, use server-side authentication (e.g., with Node.js, PHP, or a CMS).
         function promptPassword() {
             const password = prompt("Enter the password to access Research:");
-            if (password === "research2025") {
+            if (password === "Wavesofloveneverfade2025!") {
                 window.location.href = "research.html";
             } else {
                 alert("Incorrect password. Access denied.");
