--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="ITOSHIRO ZUNA LLC — research‑led publishing, interactive apps, and patent‑pending science at the intersection of technology and consciousness." />
   <title>ITOSHIRO ZUNA LLC — Company Profile</title>
-
-  <!-- Tailwind CSS (CDN) -->
+  <link rel="icon" href="/assets/favicon.ico" />
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-
   <style>
-    /* Canvas background sits behind everything */
     #bgCanvas{position:fixed;inset:0;z-index:-1}
-    /* Strong, visible focus for keyboard users */
     :focus-visible{outline:2px solid #f59e0b; outline-offset:2px}
   </style>
 </head>
@@ -20,15 +17,15 @@
   <!-- ===================== NAVIGATION ===================== -->
   <header class="fixed w-full backdrop-blur bg-slate-900/70 border-b border-slate-800 z-50">
     <div class="mx-auto max-w-7xl px-4 flex items-center justify-between h-16">
-      <a href="#home" class="text-2xl font-bold tracking-wide text-amber-400">ITOSHIRO ZUNA LLC</a>
+      <a href="index.html#home" class="text-2xl font-bold tracking-wide text-amber-400">ITOSHIRO ZUNA LLC</a>
 
-      <!-- Desktop menu -->
+      <!-- Desktop -->
       <nav class="hidden md:flex items-center gap-6 text-slate-200">
-        <a href="#home" class="hover:text-amber-400">Home</a>
-        <a href="#about" class="hover:text-amber-400">About</a>
-        <a href="#books" class="hover:text-amber-400">Books</a>
+        <a href="index.html#home" class="hover:text-amber-400">Home</a>
+        <a href="index.html#about" class="hover:text-amber-400">About</a>
+        <a href="books.html" class="hover:text-amber-400">Books</a>
 
-        <!-- Apps dropdown (desktop) -->
+        <!-- Apps dropdown -->
         <div class="relative group">
           <button class="hover:text-amber-400 flex items-center gap-1" aria-haspopup="true" aria-expanded="false" aria-controls="submenu-apps-desktop">
             Apps
@@ -45,7 +42,7 @@
           </ul>
         </div>
 
-        <!-- Research dropdown (desktop) -->
+        <!-- Research dropdown -->
         <div class="relative group">
           <button class="hover:text-amber-400 flex items-center gap-1" aria-haspopup="true" aria-expanded="false" aria-controls="submenu-research-desktop">
             Research
@@ -53,11 +50,11 @@
           </button>
           <ul id="submenu-research-desktop"
               class="absolute left-0 mt-2 hidden group-hover:block group-focus-within:block min-w-[220px] rounded-md border border-white/10 bg-black/90 shadow-xl ring-1 ring-white/10">
-            <li><a class="block px-4 py-2 hover:bg-amber-400/10 hover:text-amber-400" href="#research">Access Research</a></li>
+            <li><a class="block px-4 py-2 hover:bg-amber-400/10 hover:text-amber-400" href="index.html#research">Access Research</a></li>
           </ul>
         </div>
 
-        <a href="#social" class="hover:text-amber-400">Social Media</a>
+        <a href="index.html#social" class="hover:text-amber-400">Social Media</a>
       </nav>
 
       <!-- Mobile hamburger -->
@@ -68,15 +65,12 @@
 
     <!-- Mobile menu -->
     <div id="mobileNav" class="hidden md:hidden flex-col gap-2 p-4 bg-slate-900/90 border-t border-slate-800">
-      <a class="py-2 hover:text-amber-400" href="#home">Home</a>
-      <a class="py-2 hover:text-amber-400" href="#about">About</a>
-      <a class="py-2 hover:text-amber-400" href="#books">Books</a>
+      <a class="py-2 hover:text-amber-400" href="index.html#home">Home</a>
+      <a class="py-2 hover:text-amber-400" href="index.html#about">About</a>
+      <a class="py-2 hover:text-amber-400" href="books.html">Books</a>
 
-      <!-- Apps mobile dropdown -->
       <div class="border-t border-slate-800 pt-2">
-        <button class="w-full text-left py-2 hover:text-amber-400 flex items-center justify-between" data-dd-toggle="apps">
-          Apps <span>▾</span>
-        </button>
+        <button class="w-full text-left py-2 hover:text-amber-400 flex items-center justify-between" data-dd-toggle="apps">Apps <span>▾</span></button>
         <ul id="submenu-apps-mobile" class="hidden pl-3 text-sm">
           <li><a class="block py-2 hover:text-amber-400" href="fractal-ai-research.html">Fractal AI Research</a></li>
           <li><a class="block py-2 hover:text-amber-400" href="fractal-meditation.html">Fractal Meditation</a></li>
@@ -87,17 +81,14 @@
         </ul>
       </div>
 
-      <!-- Research mobile dropdown -->
       <div class="border-t border-slate-800 pt-2">
-        <button class="w-full text-left py-2 hover:text-amber-400 flex items-center justify-between" data-dd-toggle="research">
-          Research <span>▾</span>
-        </button>
+        <button class="w-full text-left py-2 hover:text-amber-400 flex items-center justify-between" data-dd-toggle="research">Research <span>▾</span></button>
         <ul id="submenu-research-mobile" class="hidden pl-3 text-sm">
-          <li><a class="block py-2 hover:text-amber-400" href="#research">Access Research</a></li>
+          <li><a class="block py-2 hover:text-amber-400" href="index.html#research">Access Research</a></li>
         </ul>
       </div>
 
-      <a class="py-2 hover:text-amber-400 border-t border-slate-800 mt-2" href="#social">Social Media</a>
+      <a class="py-2 hover:text-amber-400 border-t border-slate-800 mt-2" href="index.html#social">Social Media</a>
     </div>
   </header>
 
@@ -109,11 +100,11 @@
     </p>
     <div class="mt-8 flex flex-wrap gap-4 justify-center">
       <a href="#about" class="px-6 py-3 bg-amber-400 text-slate-900 rounded-md font-semibold shadow hover:scale-105 transition">Learn More</a>
-      <a href="#books" class="px-6 py-3 border border-amber-400 text-amber-400 rounded-md hover:bg-amber-400 hover:text-slate-900 transition">Explore Books</a>
+      <a href="books.html" class="px-6 py-3 border border-amber-400 text-amber-400 rounded-md hover:bg-amber-400 hover:text-slate-900 transition">Browse Books</a>
     </div>
   </section>
 
-  <!-- ===================== ABOUT / COMPANY PROFILE ===================== -->
+  <!-- ===================== ABOUT ===================== -->
   <section id="about" class="py-20 px-6 bg-slate-900/70">
     <div class="max-w-5xl mx-auto">
       <h2 class="text-3xl font-bold text-amber-400 text-center mb-8">About</h2>
@@ -128,77 +119,45 @@
         </div>
 
         <div class="rounded-lg bg-slate-800/70 border border-slate-700 p-6">
-          <h3 class="text-xl font-semibold mb-2">Snapshot (What Exists Today)</h3>
+          <h3 class="text-xl font-semibold mb-2">Snapshot (Today)</h3>
           <ul class="list-disc pl-5 text-slate-300 space-y-2">
-            <li><strong>Patent‑pending:</strong> A filed application in bio‑signal analytics (status: patent pending).</li>
+            <li><strong>Patent‑pending:</strong> filed application in bio‑signal analytics (status: pending).</li>
             <li><strong>Publishing:</strong> 8 books released across print, digital, and audio.</li>
-            <li><strong>Apps:</strong> A suite of interactive prototypes (research, meditation, education, gameplay).
-              See the <em>Apps</em> menu for links.</li>
+            <li><strong>Apps:</strong> interactive prototypes for research, meditation, education, and gameplay (see Apps menu).</li>
           </ul>
         </div>
       </div>
-
-      <div class="mt-6 grid md:grid-cols-3 gap-4">
-        <a href="#books" class="rounded-md bg-slate-800/60 border border-slate-700 p-4 hover:border-amber-400 transition">
-          <h4 class="font-semibold">Books</h4>
-          <p class="text-sm text-slate-300">Browse the current catalogue.</p>
-        </a>
-        <a href="#apps" class="rounded-md bg-slate-800/60 border border-slate-700 p-4 hover:border-amber-400 transition">
-          <h4 class="font-semibold">Apps</h4>
-          <p class="text-sm text-slate-300">Explore available prototypes and demos.</p>
-        </a>
-        <a href="#research" class="rounded-md bg-slate-800/60 border border-slate-700 p-4 hover:border-amber-400 transition">
-          <h4 class="font-semibold">Research Access</h4>
-          <p class="text-sm text-slate-300">Request materials or collaborate.</p>
-        </a>
-      </div>
     </div>
   </section>
 
-  <!-- ===================== BOOKS ===================== -->
-  <section id="books" class="py-20 px-6">
-    <h2 class="text-3xl font-bold text-amber-400 text-center mb-10">Books</h2>
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
-      <div class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/40 transition">
-        <img src="/assets/books/fractal-symphony.jpg" alt="The Fractal Symphony of Time" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+  <!-- ===================== FEATURED BOOKS (with images) ===================== -->
+  <section class="py-20 px-6">
+    <h2 class="text-3xl font-bold text-amber-400 text-center mb-10">Featured Books</h2>
+    <div class="grid sm:grid-cols-2 gap-8 max-w-5xl mx-auto">
+      <!-- Fractal Symphony -->
+      <article class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/30 transition">
+        <img src="/assets/books/fractal-symphony-of-time.jpg" alt="Cover — The Fractal Symphony of Time" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h3 class="text-xl font-semibold mb-1">The Fractal Symphony of Time</h3>
         <p class="text-sm text-slate-300 mb-3">Metaphysical exploration of time and consciousness.</p>
-        <a href="https://amzn.to/44CdNom" target="_blank" rel="noopener" class="inline-block px-4 py-2 bg-amber-400 text-slate-900 rounded font-semibold">Buy on Amazon</a>
-      </div>
-      <div class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/40 transition">
+        <a href="https://a.co/d/ct5lST4" target="_blank" rel="noopener" class="inline-block px-4 py-2 bg-amber-400 text-slate-900 rounded font-semibold">Buy on Amazon</a>
+      </article>
+
+      <!-- When Realms Bleed -->
+      <article class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/30 transition">
+        <img src="/assets/books/when-realms-bleed.jpg" alt="Cover — When Realms Bleed: The World As I See It" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h3 class="text-xl font-semibold mb-1">When Realms Bleed: The World As I See It</h3>
-        <p class="text-sm text-slate-300 mb-3">Sci‑fi Book 1 of a trilogy—journey across realms and choices.</p>
-        <a href="https://amzn.to/443m18U" target="_blank" rel="noopener" class="inline-block px-4 py-2 bg-amber-400 text-slate-900 rounded font-semibold">Buy on Amazon</a>
-      </div>
-      <div class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/40 transition">
-        <h3 class="text-xl font-semibold mb-1">Catalogue & Upcoming</h3>
-        <p class="text-sm text-slate-300 mb-3">8 books published; +2 releases every year. Request the full list.</p>
-        <a href="#contact" class="inline-block px-4 py-2 border border-amber-400 text-amber-400 rounded hover:bg-amber-400 hover:text-slate-900">Request Catalogue</a>
-      </div>
+        <p class="text-sm text-slate-300 mb-3">Book 1 of a sci‑fi journey through nine realms.</p>
+        <a href="https://a.co/d/ijwoPSi" target="_blank" rel="noopener" class="inline-block px-4 py-2 bg-amber-400 text-slate-900 rounded font-semibold">Buy on Amazon</a>
+      </article>
+    </div>
+
+    <div class="text-center mt-8">
+      <a href="books.html" class="inline-block px-6 py-3 border border-amber-400 text-amber-400 rounded-md hover:bg-amber-400 hover:text-slate-900 transition">See All Books</a>
     </div>
   </section>
 
-  <!-- ===================== APPS (brief, without disclosing plans) ===================== -->
-  <section id="apps" class="py-20 px-6 bg-slate-900/70">
-    <h2 class="text-3xl font-bold text-amber-400 text-center mb-10">Apps</h2>
-    <div class="max-w-5xl mx-auto text-center">
-      <p class="text-slate-300">Explore our interactive prototypes and demos via the <strong>Apps</strong> menu in the navigation bar.</p>
-      <div class="mt-6 flex flex-wrap gap-3 justify-center text-amber-400">
-        <a class="underline" href="fractal-ai-research.html">Fractal AI Research</a>
-        <span>•</span>
-        <a class="underline" href="fractal-meditation.html">Fractal Meditation</a>
-        <span>•</span>
-        <a class="underline" href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
-        <span>•</span>
-        <a class="underline" href="plasma-mind.html">PlasmaMind</a>
-        <span>•</span>
-        <a class="underline" href="fractal-racers.html">Fractal Racers</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- ===================== RESEARCH (safe, generic) ===================== -->
-  <section id="research" class="py-20 px-6">
+  <!-- ===================== RESEARCH (safe) ===================== -->
+  <section id="research" class="py-20 px-6 bg-slate-900/70">
     <div class="max-w-5xl mx-auto">
       <h2 class="text-3xl font-bold text-amber-400 text-center mb-8">Research</h2>
       <p class="text-slate-300 max-w-3xl mx-auto text-center">
@@ -217,8 +176,8 @@
     </div>
   </section>
 
-  <!-- ===================== SOCIAL MEDIA ===================== -->
-  <section id="social" class="py-20 px-6 bg-slate-900/70">
+  <!-- ===================== SOCIAL ===================== -->
+  <section id="social" class="py-20 px-6">
     <h2 class="text-3xl font-bold text-amber-400 text-center mb-6">Social Media</h2>
     <div class="max-w-4xl mx-auto grid sm:grid-cols-3 gap-6">
       <a href="https://x.com/senseizuna" target="_blank" rel="noopener" class="rounded-lg border border-slate-700 p-6 bg-slate-800/60 hover:border-amber-400 hover:shadow-amber-400/30 transition">
@@ -236,26 +195,14 @@
     </div>
   </section>
 
-  <!-- ===================== CONTACT (optional, safe) ===================== -->
-  <section id="contact" class="py-20 px-6">
-    <h2 class="text-3xl font-bold text-amber-400 text-center mb-6">Contact</h2>
-    <form action="https://formsubmit.co/itoshirozuna@gmail.com" method="POST" class="max-w-lg mx-auto grid gap-4">
-      <input type="text" name="name" placeholder="Name" required class="px-4 py-2 rounded bg-slate-800 border border-slate-700 focus:border-amber-400 focus:outline-none" />
-      <input type="email" name="email" placeholder="Email" required class="px-4 py-2 rounded bg-slate-800 border border-slate-700 focus:border-amber-400 focus:outline-none" />
-      <textarea name="message" rows="4" placeholder="Message" required class="px-4 py-2 rounded bg-slate-800 border border-slate-700 focus:border-amber-400 focus:outline-none"></textarea>
-      <button type="submit" class="px-6 py-3 bg-amber-400 text-slate-900 font-semibold rounded hover:bg-amber-300 transition">Send Message</button>
-    </form>
-  </section>
-
   <!-- ===================== FOOTER ===================== -->
   <footer class="bg-slate-900/80 py-6 text-center text-sm">
     <p class="mb-2">© 2025 ITOSHIRO ZUNA LLC — All rights reserved.</p>
     <p class="text-slate-400">Publishing • Apps • Research</p>
   </footer>
 
-  <!-- Fractal background canvas -->
+  <!-- Background fractal canvas -->
   <canvas id="bgCanvas" aria-hidden="true"></canvas>
-
   <script>
     // Mobile nav toggle
     const navBtn = document.getElementById('navBtn');
