--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Books | Itoshiro Zuna</title>
+  <title>Books | Itoshiro Zuna LLC</title>
   <meta name="description" content="Explore the published works of Itoshiro Zuna – metaphysics, spirituality, and science‑inspired fiction." />
   <link rel="icon" href="/assets/favicon.ico" />
   <!-- Tailwind CSS -->
