--- a/books.html
+++ b/books.html
@@ -104,7 +104,7 @@
 
   <!-- Footer -->
   <footer class="bg-black/80 text-center py-8 text-sm text-gray-400">
-    <p>© 2025 Itoshiro Zuna. All rights reserved.</p>
+    <p>© 2025 Itoshiro Zuna LLC. All rights reserved.</p>
   </footer>
 
   <!-- Background fractal (optional, matches index) -->
